[package]
name = "tortoise_datastore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
tokio = { version = "0.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
anyhow = "1.0"
thiserror = "1.0"
serde_json = { version = "1.0.54"}
serde = { version="1.0.136", features = ["derive"]}
crossbeam = "0.7.1"
crossbeam-skiplist = { git = "https://github.com/crossbeam-rs/crossbeam.git", branch = "master" }
rand = "0.8.4"
actix-rt = "1"