[package]
name = "tortoise_datastore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
openssl = { version = "0.10", features = ["v110"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
anyhow = "1.0"
thiserror = "1.0"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
crossbeam = "0.7.1"
crossbeam-skiplist = { git = "https://github.com/crossbeam-rs/crossbeam.git", branch = "master" }
rand = "0.8.4"